agregando estilos generales a las interfaces

--- a/webFinal/Views/Productoes/CatalogPro.cshtml
+++ b/webFinal/Views/Productoes/CatalogPro.cshtml
@@ -4,19 +4,24 @@
     ViewData["Title"] = "Catálogo de Productos";
 }
 
+<div class="btn btn-propio">
+    <a class="text-white" id="link" asp-action="Index"><</a>
+</div>
+
 <h1>@ViewData["Title"]</h1>
 
+<hr/>
 <div class="row">
     @foreach (var producto in Model)
     {
-        <div class="col-md-4">
-            <div class="card mb-4">
+        <div class="col-md-3">
+            <div class="card mb-3">
                 <img src="@producto.ImagenUrl1" class="card-img-top catalog-image" alt="Imagen del producto">
                 <div class="card-body">
                     <h5 class="card-title">@producto.NombreProd</h5>
                     <p class="card-text">Precio: $@producto.PrecioVenta</p>
                     <p class="card-text">Stock: @producto.Stock</p>
-                    <a href="@Url.Action("Details", "Productoes", new { id = producto.Idproducto })" class="btn btn-primary">Detalles</a>
+                    <a href="@Url.Action("Details", "Productoes", new { id = producto.Idproducto })" class="btn btn-propio text-white">Detalles</a>
                 </div>
             </div>
         </div>
