--- a/webFinal/Views/Categoriums/Details.cshtml
+++ b/webFinal/Views/Categoriums/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalles de la Categoria</h1>
 
 <div>
-    <h4>Categorium</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -19,6 +18,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Idcategoria">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-propio text-white" asp-action="Index">Regresar</a> |
+    <a class="btn btn-primary text-white" asp-action="Edit" asp-route-id="@Model?.Idcategoria">Editar</a>
 </div>
