--- a/webFinal/Views/Categoriums/Index.cshtml
+++ b/webFinal/Views/Categoriums/Index.cshtml
@@ -26,9 +26,9 @@
                 @Html.DisplayFor(modelItem => item.NombreCat)
             </td>
             <td>
-                    <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.Idcategoria">Edit</a> |
-                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Idcategoria">Details</a> |
-                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Idcategoria">Delete</a>
+                    <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.Idcategoria">Editar</a> |
+                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Idcategoria">Detalles</a> |
+                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Idcategoria">Eliminar</a>
             </td>
         </tr>
 }
