--- a/webFinal/Views/Ventums/Create.cshtml
+++ b/webFinal/Views/Ventums/Create.cshtml
@@ -4,9 +4,12 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<div class="btn btn-propio">
+    <a class="text-white" id="link" asp-action="Index"><</a>
+</div>
 
-<h4>Ventum</h4>
+<h1>Generar Ventas</h1>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -30,16 +33,13 @@
                 <label asp-for="Idempleado" class="control-label"></label>
                 <select asp-for="Idempleado" class ="form-control" asp-items="ViewBag.Idempleado"></select>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-3">
+                <input type="submit" value="Crear" class="btn btn-propio text-white" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
